Added map in application but error on maps API

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,22 +21,28 @@
         android:theme="@style/Theme.GroceryReminder"
         tools:targetApi="31">
         <activity
+            android:name=".MapActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".AddItemActivity" />
         <activity android:name=".GroceryListActivity" />
 
-        <service android:name=".services.LocationService"
+        <service
+            android:name=".services.LocationService"
             android:foregroundServiceType="location" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyAtuRjuo-r4hRv1e27U4PmNOSPDdIFlk2g" />
+            android:value="AIzaSyAtuRjuo-r4hRv1e27U4PmNOSPDdIFlk2g"
+            />
     </application>
+
 </manifest>
